@@ -3,6 +3,7 @@ Changes in Release 1.3.0
 [JXT-28] - Implement better support for xsi:nil
 [JXT-29] - Support for dateTime schema type
 [JXT-60] - Add interfaces and helpers for the global attributes from the 'xml' namespace
+[JXT-65] - XMLHelper prettyPrintXML should use the same serialization logic as writeNode
 
 Introduction of NamespaceManager, which handles management of namespace info that is in scope on an XMLObject.
 
